template/networkPolicy/flask-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-svc
  namespace: prod
spec:
  ports:
  - name: http
    nodePort: 32360
    port: 80
    targetPort: 80
  selector: 
    app: flaskapp
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flaskapp
  namespace: prod
spec:
  replicas: 3
  template:
    metadata:
      name: flaskapp
      namespace: default
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: 172.16.1.24/python/flask:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: pymount
          mountPath: /home/pytest
        command: ["python3"]
        args: ["/home/pytest/pytest.py"]
        livenessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
          periodSeconds: 3
        lifecycle:
          postStart:
            exec:
              command:
              - mkdir
              - /tmp/test
      volumes:
      - name: pymount
        hostPath:
          path: /mnt
      imagePullSecrets:
      - name: harbor-secret
#      nodeSelector:
#        first: machine
